chore: refactor booking service